--- a/assets/settings.json
+++ b/assets/settings.json
@@ -1,6 +1,6 @@
 {
-  "standard-video-columns": ["Name", "Abschnitt","Bewertung", "Bemerkung", "Outtakes (x)"],
-  "standard-picture-columns": ["Name", "Abschnitt","Bewertung", "Bemerkung", "NZS (x)", "Outtakes (x)",
+  "standard-video-columns": ["Datei", "Abschnitt","Bewertung", "Bemerkung", "Outtakes (x)"],
+  "standard-picture-columns": ["Datei", "Abschnitt","Bewertung", "Bemerkung", "NZS (x)", "Outtakes (x)",
     "Leiterabspann (x)", "Kinderabspann (x)", "Insta/Webseite (x)", "Elternabend"],
   "suggestions-video-columns": ["Personen", "Kinder", "Leiter", "Instagram", "Schnittideen"],
   "suggestions-picture-columns": ["Personen", "Kinder", "Leiter", "Fotowand (x)", "Desktophintergrund (x)"]
