--- a/src/Makefile
+++ b/src/Makefile
@@ -20,18 +20,16 @@ exe: ## Run pyinstaller
 # todo fix python path
 .PHONY: unit-tests
 unit-tests: ## run unit-tests with pytest
-	python -m pytest
-	# @pytest
+	python -m pytest --ignore=tests/integration-tests
 
 .PHONY: unit-tests-cov
 unit-tests-cov: ## run unit-tests with pytest and show coverage (terminal + html)
-	@python -m pytest --cov=. --cov-report term-missing --cov-report=html
-	# @pytest --cov=. --cov-report term-missing --cov-report=html
+	@python -m pytest --cov=. --cov-report term-missing --cov-report=html ----ignore=tests/integration-tests
 
 .PHONY: unit-tests-cov-fail
 unit-tests-cov-fail: ## run unit tests with pytest and show coverage (terminal + html) & fail if coverage too low & create files for CI
-	@python -m pytest --cov=. --cov-report term-missing --cov-report=html --cov-fail-under=80 --junitxml=pytest.xml | tee pytest-coverage.txt
-	# pytest --cov=. --cov-report term-missing --cov-report=html --cov-fail-under=80 --junitxml=pytest.xml | tee pytest-coverage.txt
+	@python -m pytest --cov=. --cov-report term-missing --cov-report=html --cov-fail-under=80 --junitxml=pytest.xml --ignore=tests/integration-tests | tee pytest-coverage.txt
+
 check-cov:
 	@python3 -m coverage report --fail-under 70
 	@count=$$(grep -o 'FAILED' pytest-coverage.txt | wc -l) && [ $$count -gt 0 ] && echo -e "\nFailed tests found: $$count \n" && exit 1 || true
